# xna

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/shell/: Shell.cpp  ShellFileInterface.cpp  ShellFileInterface.h
core/src/ui/: xna_app.cpp  xna_app.h  xna_window.cpp  xna_window.h
test/: CMakeLists.txt
test/src/: main.cpp
ui-dbg/: CMakeLists.txt
ui-dbg/resources/assets/: invader.rcss  ui_dbg_window.rml
ui-dbg/src/: main.cpp
ui-dbg/src/ui/: ui_dbg_window.cpp  ui_dbg_window.h
